--- a/gputest.yaml
+++ b/gputest.yaml
@@ -9,7 +9,7 @@ spec:
   ref:
     branch: main
   timeout: 60s
-  url: ssh://git@github.com/giantswarm/gputest
+  url: https://github.com/giantswarm/gputest
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
