Switch availability zones ((hopefully))

--- a/cluster/cluster_config.yaml
+++ b/cluster/cluster_config.yaml
@@ -1,9 +1,50 @@
 global:
   connectivity:
     availabilityZoneUsageLimit: 3
-    network: {}
-    topology: {}
-  controlPlane: {}
+    network:
+      vpcCidr: 10.0.0.0/16
+  subnets:
+    # Control plane nodes subnets
+    - id: control-plane-nodes
+      cidrBlocks:
+        - cidr: 10.0.32.0/19
+          availabilityZone: d
+        - cidr: 10.0.64.0/19
+          availabilityZone: e
+        - cidr: 10.0.96.0/19
+          availabilityZone: f
+      isPublic: false
+      tags:
+        subnet.giantswarm.io/role: control-plane
+    # Worker nodes subnets
+    - id: worker-nodes
+      cidrBlocks:
+        - cidr: 10.0.128.0/19
+          availabilityZone: d
+        - cidr: 10.0.160.0/19
+          availabilityZone: e
+        - cidr: 10.0.192.0/19
+          availabilityZone: f
+      isPublic: false
+      tags:
+        subnet.giantswarm.io/role: workers
+      topology: {}
+
+    - id: gpu-workers
+      cidrBlocks:
+        - cidr: 10.0.0.0/24
+          availabilityZone: d
+        - cidr: 10.0.1.0/24
+          availabilityZone: e
+        - cidr: 10.0.2.0/24
+          availabilityZone: f
+      isPublic: true
+      tags:
+        subnet.giantswarm.io/role: gpu-workers
+
+  controlPlane:
+    subnetTags:
+      - subnet.giantswarm.io/role: control-plane
   metadata:
     name: ${cluster_name}
     organization: ${organization}
@@ -14,6 +55,8 @@ global:
       maxSize: 3
       minSize: 1
       rootVolumeSizeGB: 8
+      subnetTags:
+        - subnet.giantswarm.io/role: workers
     gpu-worker-pool-1:
       instanceType: p5.48xlarge
       maxSize: 1
@@ -28,6 +71,8 @@ global:
         - key: "nvidia.com/gpu"
           value: "Exists"
           effect: "NoSchedule"
+      subnetTags:
+        - subnet.giantswarm.io/role: gpu-workers
   providerSpecific:
     region: us-east-1
   release:
