--- a/gputest.yaml
+++ b/gputest.yaml
@@ -18,10 +18,10 @@ metadata:
   namespace: default
 spec:
   interval: 1m
-  path: ./cluster
+  path: ./
   postBuild:
     substitute:
-      cluster_name: gputest3
+      cluster_name: gputest4
       cluster_release: 0.34.0
       organization: martin
   prune: true
@@ -41,7 +41,7 @@ spec:
   path: ./apps
   postBuild:
     substitute:
-      cluster_name: gputest3
+      cluster_name: gputest4
       organization: martin
   prune: true
   serviceAccountName: automation
