--- a/cluster/cluster_config.yaml
+++ b/cluster/cluster_config.yaml
@@ -2,39 +2,8 @@ global:
   connectivity:
     network:
       vpcCidr: 10.0.0.0/16
-  subnets:
-    # Control plane nodes subnets
-    - id: control-plane-nodes
-      cidrBlocks:
-        - cidr: 10.0.32.0/19
-        - cidr: 10.0.64.0/19
-        - cidr: 10.0.96.0/19
-      isPublic: false
-      tags:
-        subnet.giantswarm.io/role: control-plane
-    # Worker nodes subnets
-    - id: worker-nodes
-      cidrBlocks:
-        - cidr: 10.0.128.0/19
-        - cidr: 10.0.160.0/19
-        - cidr: 10.0.192.0/19
-      isPublic: false
-      tags:
-        subnet.giantswarm.io/role: workers
-      topology: {}
-
-    - id: gpu-workers
-      cidrBlocks:
-        - cidr: 10.0.0.0/24
-        - cidr: 10.0.1.0/24
-        - cidr: 10.0.2.0/24
-      isPublic: true
-      tags:
-        subnet.giantswarm.io/role: gpu-workers
-
-  controlPlane:
-    subnetTags:
-      - subnet.giantswarm.io/role: control-plane
+  subnets: {}
+  controlPlane: {}
   metadata:
     name: ${cluster_name}
     organization: ${organization}
@@ -46,8 +15,6 @@ global:
       maxSize: 3
       minSize: 1
       rootVolumeSizeGB: 8
-      subnetTags:
-        - subnet.giantswarm.io/role: workers
     gpu-worker-pool-1:
       availabilityZones: ["us-east-1d", "us-east-1e", "us-east-1f"]
       instanceType: p5.48xlarge
@@ -63,8 +30,6 @@ global:
         - key: "nvidia.com/gpu"
           value: "Exists"
           effect: "NoSchedule"
-      subnetTags:
-        - subnet.giantswarm.io/role: gpu-workers
   providerSpecific:
     region: us-east-1
   release:
