--- a/cluster/cluster_config.yaml
+++ b/cluster/cluster_config.yaml
@@ -2,27 +2,63 @@ global:
   connectivity:
     network:
       vpcCidr: 10.0.0.0/16
-  subnets: {}
-  controlPlane: {}
+  subnets:
+    # Control plane nodes subnets
+    - id: control-plane-nodes
+      cidrBlocks:
+        - cidr: 10.0.32.0/19
+          availabilityZone: us-east-1d
+        - cidr: 10.0.64.0/19
+          availabilityZone: us-east-1e
+        - cidr: 10.0.96.0/19
+          availabilityZone: us-east-1f
+      isPublic: false
+      tags:
+        subnet.giantswarm.io/role: control-plane
+    # Worker nodes subnets
+    - id: worker-nodes
+      cidrBlocks:
+        - cidr: 10.0.128.0/19
+          availabilityZone: us-east-1d
+        - cidr: 10.0.160.0/19
+          availabilityZone: us-east-1e
+        - cidr: 10.0.192.0/19
+          availabilityZone: us-east-1f
+      isPublic: false
+      tags:
+        subnet.giantswarm.io/role: workers
+      topology: {}
+
+    - id: gpu-workers
+      cidrBlocks:
+        - cidr: 10.0.0.0/24
+          availabilityZone: us-east-1d
+        - cidr: 10.0.1.0/24
+          availabilityZone: us-east-1e
+        - cidr: 10.0.2.0/24
+          availabilityZone: us-east-1f
+      isPublic: true
+      tags:
+        subnet.giantswarm.io/role: gpu-workers
+
+  controlPlane:
+    subnetTags:
+      - subnet.giantswarm.io/role: control-plane
   metadata:
     name: ${cluster_name}
     organization: ${organization}
     preventDeletion: false
   nodePools:
     nodepool0:
-      availabilityZones:
-        - us-east-1d
-        - us-east-1e
-        - us-east-1f
+      availabilityZones: ["us-east-1d", "us-east-1e", "us-east-1f"]
       instanceType: m5.xlarge
       maxSize: 3
       minSize: 1
       rootVolumeSizeGB: 8
+      subnetTags:
+        - subnet.giantswarm.io/role: workers
     gpu-worker-pool-1:
-      availabilityZones:
-        - us-east-1d
-        - us-east-1e
-        - us-east-1f
+      availabilityZones: ["us-east-1d", "us-east-1e", "us-east-1f"]
       instanceType: p5.48xlarge
       maxSize: 1
       minSize: 1
@@ -36,6 +72,8 @@ global:
         - key: "nvidia.com/gpu"
           value: "Exists"
           effect: "NoSchedule"
+      subnetTags:
+        - subnet.giantswarm.io/role: gpu-workers
   providerSpecific:
     region: us-east-1
   release:
