--- a/cluster/cluster_config.yaml
+++ b/cluster/cluster_config.yaml
@@ -4,8 +4,7 @@ global:
       vpcCidr: 10.0.0.0/16
   subnets:
     # Control plane nodes subnets
-    - id: control-plane
-      cidrBlocks:
+    - cidrBlocks:
         - cidr: 10.0.32.0/19
           availabilityZone: us-east-1d
         - cidr: 10.0.64.0/19
@@ -16,8 +15,7 @@ global:
       tags:
         subnet.giantswarm.io/role: control-plane
     # Worker nodes subnets
-    - id: worker-nodes
-      cidrBlocks:
+    - cidrBlocks:
         - cidr: 10.0.128.0/19
           availabilityZone: us-east-1d
         - cidr: 10.0.160.0/19
@@ -29,8 +27,7 @@ global:
         subnet.giantswarm.io/role: workers
       topology: {}
 
-    - id: gpu-workers
-      cidrBlocks:
+    - cidrBlocks:
         - cidr: 10.0.0.0/24
           availabilityZone: us-east-1d
         - cidr: 10.0.1.0/24
