--- a/cluster/cluster_config.yaml
+++ b/cluster/cluster_config.yaml
@@ -6,22 +6,22 @@ global:
       # Control plane nodes subnets
       - cidrBlocks:
           - cidr: 10.0.32.0/19
-            availabilityZone: us-east-1d
+            availabilityZone: d
           - cidr: 10.0.64.0/19
-            availabilityZone: us-east-1e
+            availabilityZone: e
           - cidr: 10.0.96.0/19
-            availabilityZone: us-east-1f
+            availabilityZone: f
         isPublic: false
         tags:
           subnet.giantswarm.io/role: control-plane
       # Worker nodes subnets
       - cidrBlocks:
           - cidr: 10.0.128.0/19
-            availabilityZone: us-east-1d
+            availabilityZone: d
           - cidr: 10.0.160.0/19
-            availabilityZone: us-east-1e
+            availabilityZone: e
           - cidr: 10.0.192.0/19
-            availabilityZone: us-east-1f
+            availabilityZone: f
         isPublic: false
         tags:
           subnet.giantswarm.io/role: workers
@@ -29,11 +29,11 @@ global:
 
       - cidrBlocks:
           - cidr: 10.0.0.0/24
-            availabilityZone: us-east-1d
+            availabilityZone: d
           - cidr: 10.0.1.0/24
-            availabilityZone: us-east-1e
+            availabilityZone: e
           - cidr: 10.0.2.0/24
-            availabilityZone: us-east-1f
+            availabilityZone: f
         isPublic: true
         tags:
           subnet.giantswarm.io/role: gpu-workers
