--- a/cluster/cluster_config.yaml
+++ b/cluster/cluster_config.yaml
@@ -11,6 +11,7 @@ global:
             availabilityZone: e
           - cidr: 10.0.96.0/19
             availabilityZone: f
+        id: control-plane
         isPublic: false
         tags:
           subnet.giantswarm.io/role: control-plane
@@ -22,6 +23,7 @@ global:
             availabilityZone: e
           - cidr: 10.0.192.0/19
             availabilityZone: f
+        id: workers
         isPublic: false
         tags:
           subnet.giantswarm.io/role: workers
@@ -33,6 +35,7 @@ global:
             availabilityZone: e
           - cidr: 10.0.2.0/24
             availabilityZone: f
+        id: gpu-workers
         isPublic: true
         tags:
           subnet.giantswarm.io/role: gpu-workers
