--- a/cluster/cluster_config.yaml
+++ b/cluster/cluster_config.yaml
@@ -11,23 +11,9 @@ global:
             availabilityZone: e
           - cidr: 10.0.96.0/19
             availabilityZone: f
-        id: control-plane
         isPublic: false
         tags:
           subnet.giantswarm.io/role: control-plane
-      # Worker nodes subnets
-      - cidrBlocks:
-          - cidr: 10.0.128.0/19
-            availabilityZone: d
-          - cidr: 10.0.160.0/19
-            availabilityZone: e
-          - cidr: 10.0.192.0/19
-            availabilityZone: f
-        id: workers
-        isPublic: false
-        tags:
-          subnet.giantswarm.io/role: workers
-
       - cidrBlocks:
           - cidr: 10.0.0.0/24
             availabilityZone: d
@@ -41,6 +27,10 @@ global:
           subnet.giantswarm.io/role: gpu-workers
 
   controlPlane:
+    availabilityZones:
+      - us-east-1d
+      - us-east-1e
+      - us-east-1f
     subnetTags:
       - subnet.giantswarm.io/role: control-plane
   metadata:
@@ -49,7 +39,10 @@ global:
     preventDeletion: false
   nodePools:
     nodepool0:
-      availabilityZones: ["us-east-1d", "us-east-1e", "us-east-1f"]
+      availabilityZones:
+        - us-east-1d
+        - us-east-1e
+        - us-east-1f
       instanceType: m5.xlarge
       maxSize: 3
       minSize: 1
@@ -57,7 +50,10 @@ global:
       subnetTags:
         - subnet.giantswarm.io/role: workers
     gpu-worker-pool-1:
-      availabilityZones: ["us-east-1d", "us-east-1e", "us-east-1f"]
+      availabilityZones:
+        - us-east-1d
+        - us-east-1e
+        - us-east-1f
       instanceType: p5.48xlarge
       maxSize: 1
       minSize: 1
