--- a/gputest.yaml
+++ b/gputest.yaml
@@ -21,8 +21,8 @@ spec:
   path: ./
   postBuild:
     substitute:
-      cluster_name: gputest2
-      cluster_release: 0.34.0
+      cluster_name: gputest3
+      release: 30.1.0
       organization: martin
   prune: true
   serviceAccountName: automation
@@ -41,7 +41,7 @@ spec:
   path: ./apps
   postBuild:
     substitute:
-      cluster_name: gputest2
+      cluster_name: ${cluster_name}
       organization: martin
   prune: true
   serviceAccountName: automation
