Try forcing az B

--- a/gputest.yaml
+++ b/gputest.yaml
@@ -21,7 +21,7 @@ spec:
   path: ./
   postBuild:
     substitute:
-      cluster_name: gputest
+      cluster_name: gputest1
       organization: martin
   prune: true
   serviceAccountName: automation
